--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyRecyclerView</string>
+    <string name="app_name">Football biography</string>
     <string name="heroes_name">Nama Pahlawan</string>
     <string name="from">Asal</string>
     <string name="list">List</string>
@@ -8,5 +8,23 @@
     <string name="description">deskripsi</string>
     <string name="favorite">Favorite</string>
     <string name="share">Share</string>
+
+
+    <string name="title_onboarding_1">Welcome to Football Biography !</string>
+    <string name="description_onboarding_1">Here is a football player biography app you can find out some football player biography </string>
+
+    <string name="title_onboarding_2">Trusted source</string>
+    <string name="description_onboarding_2">We take information from reliable sources and we correct any information we get before we publish it </string>
+
+    <string name="title_onboarding_3">make your knowledge about football be increased</string>
+    <string name="description_onboarding_3">Our mission is to provide information regarding football player biographies and much more</string>
+
+    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>
+
+    <string name="start">start</string>
+    <string name="skip">Skip</string>
+    <string name="finish">finish</string>
+    <string name="next">next</string>
+    <string name="back">back</string>
 
 </resources>
